--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -399,8 +399,9 @@ else()
 endif()
 
 if(WITH_NSS)
+	check_include_files(nss/nss.h HAVE_NSS_NSS_H)
 	check_include_files(nss3/nss.h HAVE_NSS3_NSS_H)
-	if(HAVE_NSS3_NSS_H)
+	if(HAVE_NSS3_NSS_H OR HAVE_NSS_NSS_H)
 		check_library_exists(ssl3 NSSSSL_GetVersion "" HAVE_LIBSSL3)
 		if(HAVE_LIBSSL3)
 		    check_library_exists(smime3 NSSSMIME_GetVersion "" HAVE_LIBSMIME3)
@@ -413,6 +414,7 @@ if(WITH_NSS)
 		endif()
 	endif()
 else()
+	unset(HAVE_NSS_NSS_H)
 	unset(HAVE_NSS3_NSS_H)
 	unset(HAVE_LIBSSL3)
 	unset(HAVE_LIBSMIME3)
