--- a/src/SConscript
+++ b/src/SConscript
@@ -309,6 +309,7 @@ instbin = env.Program(bin_targets, src, LINKFLAGS = bin_linkflags,
 		env['LIBCRYPTO'],
 		env['LIBDL'],
 		env['LIBPCRE'],
+		env['LIBXXHASH'],
 	)
 )
 env.Depends(instbin, configparser)
