[doc] refresh doc/config/conf.d/mime.conf

--- a/doc/config/conf.d/mime.conf
+++ b/doc/config/conf.d/mime.conf
@@ -60,10 +60,14 @@ mimetype.assign = (
 	".atomcat" => "application/atomcat+xml",
 	".atomdeleted" => "application/atomdeleted+xml",
 	".atomsvc" => "application/atomsvc+xml",
+	".dwd" => "application/atsc-dwd+xml",
+	".held" => "application/atsc-held+xml",
+	".rsat" => "application/atsc-rsat+xml",
 	".apxml" => "application/auth-policy+xml",
 	".xdd" => "application/bacnet-xdd+zip",
 	".xcs" => "application/calendar+xml",
 	".cbor" => "application/cbor",
+	".c3ex" => "application/cccex",
 	".ccmp" => "application/ccmp+xml",
 	".ccxml" => "application/ccxml+xml",
 	".cdmia" => "application/cdmi-capability",
@@ -94,6 +98,9 @@ mimetype.assign = (
 	".fdt" => "application/fdt+xml",
 	".pfr" => "application/font-tdpfr",
 	".geojson" => "application/geo+json",
+	".gpkg" => "application/geopackage+sqlite3",
+	".glbin" => "application/gltf-buffer",
+	".glbuf" => "application/gltf-buffer",
 	".gml" => "application/gml+xml",
 	".gz" => "application/gzip",
 	".tgz" => "application/gzip",
@@ -111,6 +118,7 @@ mimetype.assign = (
 	".wlnk" => "application/link-format",
 	".lostxml" => "application/lost+xml",
 	".lostsyncxml" => "application/lostsync+xml",
+	".lpf" => "application/lpf+zip",
 	".hqx" => "application/mac-binhex40",
 	".cpt" => "application/mac-compactpro",
 	".mads" => "application/mads+xml",
@@ -124,6 +132,8 @@ mimetype.assign = (
 	".metalink" => "application/metalink+xml",
 	".meta4" => "application/metalink4+xml",
 	".mets" => "application/mets+xml",
+	".maei" => "application/mmt-aei+xml",
+	".musd" => "application/mmt-usd+xml",
 	".mods" => "application/mods+xml",
 	".m21" => "application/mp21",
 	".mp21" => "application/mp21",
@@ -149,6 +159,7 @@ mimetype.assign = (
 	".oxps" => "application/oxps",
 	".relo" => "application/p2p-overlay+xml",
 	".pdf" => "application/pdf",
+	".pem" => "application/pem-certificate-chain",
 	".pgp" => "application/pgp-encrypted",
 	".sig" => "application/pgp-signature",
 	".p10" => "application/pkcs10",
@@ -158,6 +169,7 @@ mimetype.assign = (
 	".p7m" => "application/pkcs7-mime",
 	".p7s" => "application/pkcs7-signature",
 	".p8" => "application/pkcs8",
+	".p8e" => "application/pkcs8-encrypted",
 	".cer" => "application/pkix-cert",
 	".crl" => "application/pkix-crl",
 	".pkipath" => "application/pkix-pkipath",
@@ -182,6 +194,9 @@ mimetype.assign = (
 	".rld" => "application/resource-lists-diff+xml",
 	".rfcxml" => "application/rfc+xml",
 	".rs" => "application/rls-services+xml",
+	".rapd" => "application/route-apd+xml",
+	".sls" => "application/route-s-tsid+xml",
+	".rusd" => "application/route-usd+xml",
 	".gbr" => "application/rpki-ghostbusters",
 	".mft" => "application/rpki-manifest",
 	".roa" => "application/rpki-roa",
@@ -193,6 +208,16 @@ mimetype.assign = (
 	".spq" => "application/scvp-vp-request",
 	".spp" => "application/scvp-vp-response",
 	".sdp" => "application/sdp",
+	".senmlc" => "application/senml+cbor",
+	".senml" => "application/senml+json",
+	".senmlx" => "application/senml+xml",
+	".senml-etchc" => "application/senml-etch+cbor",
+	".senml-etchj" => "application/senml-etch+json",
+	".senmle" => "application/senml-exi",
+	".sensmlc" => "application/sensml+cbor",
+	".sensml" => "application/sensml+json",
+	".sensmlx" => "application/sensml+xml",
+	".sensmle" => "application/sensml-exi",
 	".soc" => "application/sgml-open-catalog",
 	".shf" => "application/shf+xml",
 	".sieve" => "application/sieve",
@@ -208,6 +233,8 @@ mimetype.assign = (
 	".grxml" => "application/srgs+xml",
 	".sru" => "application/sru+xml",
 	".ssml" => "application/ssml+xml",
+	".stix" => "application/stix+json",
+	".swidtag" => "application/swid+xml",
 	".tau" => "application/tamp-apex-update",
 	".auc" => "application/tamp-apex-update-confirm",
 	".tcu" => "application/tamp-community-update",
@@ -217,6 +244,7 @@ mimetype.assign = (
 	".sac" => "application/tamp-sequence-adjust-confirm",
 	".tur" => "application/tamp-update",
 	".tuc" => "application/tamp-update-confirm",
+	".jsontd" => "application/td+json",
 	".odd" => "application/tei+xml",
 	".tei" => "application/tei+xml",
 	".teiCorpus" => "application/tei+xml",
@@ -231,6 +259,7 @@ mimetype.assign = (
 	".td" => "application/urc-targetdesc+xml",
 	".uis" => "application/urc-uisocketdesc+xml",
 	".vxml" => "application/voicexml+xml",
+	".vcj" => "application/voucher-cms+json",
 	".wif" => "application/watcherinfo+xml",
 	".wgt" => "application/widget",
 	".wsdl" => "application/wsdl+xml",
@@ -244,6 +273,7 @@ mimetype.assign = (
 	".xht" => "application/xhtml+xml",
 	".xhtm" => "application/xhtml+xml",
 	".xhtml" => "application/xhtml+xml",
+	".xlf" => "application/xliff+xml",
 	".dtd" => "application/xml-dtd",
 	".xop" => "application/xop+xml",
 	".xsl" => "application/xslt+xml",
@@ -255,6 +285,8 @@ mimetype.assign = (
 	".yang" => "application/yang",
 	".yin" => "application/yin+xml",
 	".zip" => "application/zip",
+	".zst" => "application/zstd",
+	".1km" => "application/vnd.1000minds.decision-model+xml",
 	".pwn" => "application/vnd.3M.Post-it-Notes",
 	".plb" => "application/vnd.3gpp.pic-bw-large",
 	".psb" => "application/vnd.3gpp.pic-bw-small",
@@ -294,12 +326,19 @@ mimetype.assign = (
 	".fxpl" => "application/vnd.adobe.fxp",
 	".xdp" => "application/vnd.adobe.xdp+xml",
 	".xfdf" => "application/vnd.adobe.xfdf",
+	".afp" => "application/vnd.afpc.modca",
+	".list3820" => "application/vnd.afpc.modca",
+	".listafp" => "application/vnd.afpc.modca",
+	".pseg3820" => "application/vnd.afpc.modca",
+	".ovl" => "application/vnd.afpc.modca-overlay",
+	".psg" => "application/vnd.afpc.modca-pagesegment",
 	".ahead" => "application/vnd.ahead.space",
 	".azf" => "application/vnd.airzip.filesecure.azf",
 	".azs" => "application/vnd.airzip.filesecure.azs",
 	".azw3" => "application/vnd.amazon.mobi8-ebook",
 	".acc" => "application/vnd.americandynamics.acc",
 	".ami" => "application/vnd.amiga.ami",
+	".ota" => "application/vnd.android.ota",
 	".apk" => "application/vnd.android.package-archive",
 	".apkg" => "application/vnd.anki",
 	".cii" => "application/vnd.anser-web-certificate-issue-initiation",
@@ -308,13 +347,18 @@ mimetype.assign = (
 	".distz" => "application/vnd.apple.installer+xml",
 	".mpkg" => "application/vnd.apple.installer+xml",
 	".pkg" => "application/vnd.apple.installer+xml",
+	".keynote" => "application/vnd.apple.keynote",
 	".m3u8" => "application/vnd.apple.mpegurl",
+	".numbers" => "application/vnd.apple.numbers",
+	".pages" => "application/vnd.apple.pages",
 	".swi" => "application/vnd.aristanetworks.swi",
+	".artisan" => "application/vnd.artisan+json",
 	".iota" => "application/vnd.astraea-software.iota",
 	".aep" => "application/vnd.audiograph",
 	".package" => "application/vnd.autopackage",
 	".bmml" => "application/vnd.balsamiq.bmml+xml",
 	".bmpr" => "application/vnd.balsamiq.bmpr",
+	".ac2" => "application/vnd.banana-accounting",
 	".mpm" => "application/vnd.blueice.multipass",
 	".ep" => "application/vnd.bluetooth.ep.oob",
 	".le" => "application/vnd.bluetooth.le.oob",
@@ -336,7 +380,14 @@ mimetype.assign = (
 	".c11amc" => "application/vnd.cluetrust.cartomobile-config",
 	".c11amz" => "application/vnd.cluetrust.cartomobile-config-pkg",
 	".coffee" => "application/vnd.coffeescript",
+	".xodt" => "application/vnd.collabio.xodocuments.document",
+	".xott" => "application/vnd.collabio.xodocuments.document-template",
+	".xodp" => "application/vnd.collabio.xodocuments.presentation",
+	".xotp" => "application/vnd.collabio.xodocuments.presentation-template",
+	".xods" => "application/vnd.collabio.xodocuments.spreadsheet",
+	".xots" => "application/vnd.collabio.xodocuments.spreadsheet-template",
 	".cbz" => "application/vnd.comicbook+zip",
+	".cbr" => "application/vnd.comicbook-rar",
 	".ic0" => "application/vnd.commerce-battelle",
 	".ic1" => "application/vnd.commerce-battelle",
 	".ic2" => "application/vnd.commerce-battelle",
@@ -361,11 +412,13 @@ mimetype.assign = (
 	".clkt" => "application/vnd.crick.clicker.template",
 	".clkw" => "application/vnd.crick.clicker.wordbank",
 	".wbs" => "application/vnd.criticaltools.wbs+xml",
+	".ssvc" => "application/vnd.crypto-shade-file",
 	".pml" => "application/vnd.ctc-posml",
 	".ppd" => "application/vnd.cups-ppd",
 	".curl" => "application/vnd.curl",
 	".dart" => "application/vnd.dart",
 	".rdz" => "application/vnd.data-vision.rdz",
+	".dbf" => "application/vnd.dbf",
 	".deb" => "application/vnd.debian.binary-package",
 	".udeb" => "application/vnd.debian.binary-package",
 	".uvd" => "application/vnd.dece.data",
@@ -407,6 +460,11 @@ mimetype.assign = (
 	".sce" => "application/vnd.etsi.asic-e+zip",
 	".asics" => "application/vnd.etsi.asic-s+zip",
 	".tst" => "application/vnd.etsi.timestamp-token",
+	".ecigprofile" => "application/vnd.evolv.ecig.profile",
+	".ecig" => "application/vnd.evolv.ecig.settings",
+	".ecigtheme" => "application/vnd.evolv.ecig.theme",
+	".mpw" => "application/vnd.exstream-empower+zip",
+	".pub" => "application/vnd.exstream-package",
 	".ez2" => "application/vnd.ezpix-album",
 	".ez3" => "application/vnd.ezpix-package",
 	".dim" => "application/vnd.fastcopy-disk-image",
@@ -415,6 +473,7 @@ mimetype.assign = (
 	".mseed" => "application/vnd.fdsn.mseed",
 	".dataless" => "application/vnd.fdsn.seed",
 	".seed" => "application/vnd.fdsn.seed",
+	".flb" => "application/vnd.ficlab.flb+zip",
 	".zfc" => "application/vnd.filmit.zfc",
 	".ftc" => "application/vnd.fluxtime.clip",
 	".sfd" => "application/vnd.font-fontforge-sfd",
@@ -471,10 +530,6 @@ mimetype.assign = (
 	".x3d" => "application/vnd.hzn-3d-crossword",
 	".mpy" => "application/vnd.ibm.MiniPay",
 	".emm" => "application/vnd.ibm.electronic-media",
-	".afp" => "application/vnd.ibm.modcap",
-	".list3820" => "application/vnd.ibm.modcap",
-	".listafp" => "application/vnd.ibm.modcap",
-	".pseg3820" => "application/vnd.ibm.modcap",
 	".irm" => "application/vnd.ibm.rights-management",
 	".sc" => "application/vnd.ibm.secure-container",
 	".icc" => "application/vnd.iccprofile",
@@ -522,6 +577,9 @@ mimetype.assign = (
 	".lasxml" => "application/vnd.las.las+xml",
 	".lbd" => "application/vnd.llamagraphics.life-balance.desktop",
 	".lbe" => "application/vnd.llamagraphics.life-balance.exchange+xml",
+	".lca" => "application/vnd.logipipe.circuit+zip",
+	".lcs" => "application/vnd.logipipe.circuit+zip",
+	".loom" => "application/vnd.loom",
 	".123" => "application/vnd.lotus-1-2-3",
 	".wk1" => "application/vnd.lotus-1-2-3",
 	".wk3" => "application/vnd.lotus-1-2-3",
@@ -609,6 +667,7 @@ mimetype.assign = (
 	".kcm" => "application/vnd.nervana",
 	".request" => "application/vnd.nervana",
 	".nlu" => "application/vnd.neurolanguage.nlu",
+	".nimn" => "application/vnd.nimn",
 	".nds" => "application/vnd.nintendo.nitro.rom",
 	".sfc" => "application/vnd.nintendo.snes.rom",
 	".smc" => "application/vnd.nintendo.snes.rom",
@@ -678,6 +737,7 @@ mimetype.assign = (
 	".pqa" => "application/vnd.palm",
 	".prc" => "application/vnd.palm",
 	".plp" => "application/vnd.panoply",
+	".dive" => "application/vnd.patentdive",
 	".paw" => "application/vnd.pawaafile",
 	".str" => "application/vnd.pg.format",
 	".ei6" => "application/vnd.pg.osasli",
@@ -690,6 +750,7 @@ mimetype.assign = (
 	".box" => "application/vnd.previewsystems.box",
 	".vbox" => "application/vnd.previewsystems.box",
 	".mgz" => "application/vnd.proteus.magazine",
+	".psfs" => "application/vnd.psfs",
 	".qps" => "application/vnd.publishare-delta-tree",
 	".ptid" => "application/vnd.pvi.ptid1",
 	".bar" => "application/vnd.qualcomm.brew-app-res",
@@ -702,6 +763,7 @@ mimetype.assign = (
 	".cryptonote" => "application/vnd.rig.cryptonote",
 	".link66" => "application/vnd.route66.link66+xml",
 	".st" => "application/vnd.sailingtracker.track",
+	".SAR" => "application/vnd.sar",
 	".scd" => "application/vnd.scribus",
 	".sla" => "application/vnd.scribus",
 	".slaz" => "application/vnd.scribus",
@@ -729,19 +791,27 @@ mimetype.assign = (
 	".sema" => "application/vnd.sema",
 	".semd" => "application/vnd.semd",
 	".semf" => "application/vnd.semf",
+	".ssv" => "application/vnd.shade-save-file",
 	".ifm" => "application/vnd.shana.informed.formdata",
 	".itp" => "application/vnd.shana.informed.formtemplate",
 	".iif" => "application/vnd.shana.informed.interchange",
 	".ipk" => "application/vnd.shana.informed.package",
+	".shp" => "application/vnd.shp",
+	".shx" => "application/vnd.shx",
+	".sr" => "application/vnd.sigrok.session",
 	".mmf" => "application/vnd.smaf",
 	".notebook" => "application/vnd.smart.notebook",
 	".teacher" => "application/vnd.smart.teacher",
+	".pt" => "application/vnd.snesdev-page-table",
+	".ptrom" => "application/vnd.snesdev-page-table",
 	".fo" => "application/vnd.software602.filler.form+xml",
 	".zfo" => "application/vnd.software602.filler.form-xml-zip",
 	".sdkd" => "application/vnd.solent.sdkm+xml",
 	".sdkm" => "application/vnd.solent.sdkm+xml",
 	".dxp" => "application/vnd.spotfire.dxp",
 	".sfs" => "application/vnd.spotfire.sfs",
+	".sqlite" => "application/vnd.sqlite3",
+	".sqlite3" => "application/vnd.sqlite3",
 	".smzip" => "application/vnd.stepmania.package",
 	".sm" => "application/vnd.stepmania.stepchart",
 	".wadl" => "application/vnd.sun.wadl+xml",
@@ -767,6 +837,7 @@ mimetype.assign = (
 	".dmp" => "application/vnd.tcpdump.pcap",
 	".pcap" => "application/vnd.tcpdump.pcap",
 	".qvd" => "application/vnd.theqvd",
+	".ppttc" => "application/vnd.think-cell.ppttc+json",
 	".vfr" => "application/vnd.tml",
 	".viaframe" => "application/vnd.tml",
 	".tmo" => "application/vnd.tmobile-livetv",
@@ -789,6 +860,9 @@ mimetype.assign = (
 	".mxi" => "application/vnd.vd-study",
 	".study-inter" => "application/vnd.vd-study",
 	".vwx" => "application/vnd.vectorworks",
+	".istc" => "application/vnd.veryant.thin",
+	".isws" => "application/vnd.veryant.thin",
+	".VES" => "application/vnd.ves.encrypted",
 	".vsc" => "application/vnd.vidsoft.vidconference",
 	".vsd" => "application/vnd.visio",
 	".vss" => "application/vnd.visio",
@@ -895,12 +969,16 @@ mimetype.assign = (
 	".evw" => "audio/EVRCWB",
 	".l16" => "audio/L16",
 	".smv" => "audio/SMV",
+	".aac" => "audio/aac",
+	".adts" => "audio/aac",
+	".ass" => "audio/aac",
 	".ac3" => "audio/ac3",
 	".acn" => "audio/asc",
 	".au" => "audio/basic",
 	".snd" => "audio/basic",
 	".dls" => "audio/dls",
 	".lbc" => "audio/iLBC",
+	".mhas" => "audio/mhas",
 	".kar" => "audio/midi",
 	".mid" => "audio/midi",
 	".midi" => "audio/midi",
@@ -917,6 +995,8 @@ mimetype.assign = (
 	".psid" => "audio/prs.sid",
 	".sid" => "audio/prs.sid",
 	".qcp" => "audio/qcelp",
+	".loas" => "audio/usac",
+	".xhe" => "audio/usac",
 	".koz" => "audio/vnd.audikoz",
 	".uva" => "audio/vnd.dece.audio",
 	".uvva" => "audio/vnd.dece.audio",
@@ -931,6 +1011,7 @@ mimetype.assign = (
 	".ecelp4800" => "audio/vnd.nuera.ecelp4800",
 	".ecelp7470" => "audio/vnd.nuera.ecelp7470",
 	".ecelp9600" => "audio/vnd.nuera.ecelp9600",
+	".multitrack" => "audio/vnd.presonus.multitrack",
 	".rip" => "audio/vnd.rip",
 	".s1m" => "audio/vnd.sealedmedia.softseal.mpeg",
 	".smp" => "audio/vnd.sealedmedia.softseal.mpeg",
@@ -963,6 +1044,9 @@ mimetype.assign = (
 	".ttf" => "font/ttf",
 	".woff" => "font/woff",
 	".woff2" => "font/woff2",
+	".exr" => "image/aces",
+	".avci" => "image/avci",
+	".avcs" => "image/avcs",
 	".bmp" => "image/bmp",
 	".dib" => "image/bmp",
 	".cgm" => "image/cgm",
@@ -972,6 +1056,12 @@ mimetype.assign = (
 	".fits" => "image/fits",
 	".fts" => "image/fits",
 	".gif" => "image/gif",
+	".heic" => "image/heic",
+	".heics" => "image/heic-sequence",
+	".heif" => "image/heif",
+	".heifs" => "image/heif-sequence",
+	".hej2" => "image/hej2k",
+	".hsj2" => "image/hsj2",
 	".ief" => "image/ief",
 	".jls" => "image/jls",
 	".jp2" => "image/jp2",
@@ -980,10 +1070,19 @@ mimetype.assign = (
 	".jpe" => "image/jpeg",
 	".jpeg" => "image/jpeg",
 	".jpg" => "image/jpeg",
+	".jph" => "image/jph",
+	".jhc" => "image/jphc",
 	".jpgm" => "image/jpm",
 	".jpm" => "image/jpm",
 	".jpf" => "image/jpx",
 	".jpx" => "image/jpx",
+	".jxr" => "image/jxr",
+	".jxra" => "image/jxrA",
+	".jxrs" => "image/jxrS",
+	".jxs" => "image/jxs",
+	".jxsc" => "image/jxsc",
+	".jxsi" => "image/jxsi",
+	".jxss" => "image/jxss",
 	".ktx" => "image/ktx",
 	".png" => "image/png",
 	".btf" => "image/prs.btif",
@@ -1051,11 +1150,15 @@ mimetype.assign = (
 	".eml" => "message/rfc822",
 	".mail" => "message/rfc822",
 	".gltf" => "model/gltf+json",
+	".glb" => "model/gltf-binary",
 	".iges" => "model/iges",
 	".igs" => "model/iges",
 	".mesh" => "model/mesh",
 	".msh" => "model/mesh",
 	".silo" => "model/mesh",
+	".mtl" => "model/mtl",
+	".obj" => "model/obj",
+	".stl" => "model/stl",
 	".vrml" => "model/vrml",
 	".wrl" => "model/vrml",
 	".x3db" => "model/x3d+xml",
@@ -1075,6 +1178,7 @@ mimetype.assign = (
 	".moml" => "model/vnd.moml+xml",
 	".mts" => "model/vnd.mts",
 	".ogex" => "model/vnd.opengex",
+	".usdz" => "model/vnd.usdz+zip",
 	".bsp" => "model/vnd.valve.source.compiled-map",
 	".vtu" => "model/vnd.vtu",
 	".vpm" => "multipart/voice-message",
@@ -1127,6 +1231,7 @@ mimetype.assign = (
 	".uris" => "text/uri-list",
 	".vcard" => "text/vcard",
 	".vcf" => "text/vcard",
+	".vtt" => "text/vtt",
 	".rng" => "text/xml",
 	".xml" => "text/xml",
 	".xsd" => "text/xml",
@@ -1138,17 +1243,21 @@ mimetype.assign = (
 	".copyright" => "text/vnd.debian.copyright",
 	".sub" => "text/vnd.dvb.subtitle",
 	".jtd" => "text/vnd.esmertec.theme-descriptor",
+	".flt" => "text/vnd.ficlab.flt",
 	".fly" => "text/vnd.fly",
 	".flx" => "text/vnd.fmi.flexstor",
 	".dot" => "text/vnd.graphviz",
 	".gv" => "text/vnd.graphviz",
+	".hgl" => "text/vnd.hgl",
 	".3dm" => "text/vnd.in3d.3dml",
 	".3dml" => "text/vnd.in3d.3dml",
 	".spo" => "text/vnd.in3d.spot",
 	".spot" => "text/vnd.in3d.spot",
 	".mpf" => "text/vnd.ms-mediapackage",
 	".ccc" => "text/vnd.net2phone.commcenter.command",
+	".mc2" => "text/vnd.senx.warpscript",
 	".uric" => "text/vnd.si.uricatalogue",
+	".sos" => "text/vnd.sosi",
 	".jad" => "text/vnd.sun.j2me.app-descriptor",
 	".ts" => "text/vnd.trolltech.linguist",
 	".si" => "text/vnd.wap.si",
@@ -1206,6 +1315,7 @@ mimetype.assign = (
 	".smo" => "video/vnd.sealedmedia.softseal.mov",
 	".smov" => "video/vnd.sealedmedia.softseal.mov",
 	".viv" => "video/vnd.vivo",
+	".yt" => "video/vnd.youtube.yt",
 	".axv" => "video/x-annodex",
 	".flv" => "video/x-flv",
 	".fxm" => "video/x-javafx",
