--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -91,6 +91,7 @@ check_include_files(sys/epoll.h HAVE_SYS_EPOLL_H)
 set(CMAKE_REQUIRED_FLAGS "-include sys/types.h")
 check_include_files(sys/event.h HAVE_SYS_EVENT_H)
 set(CMAKE_REQUIRED_FLAGS)
+check_include_files(sys/inotify.h HAVE_SYS_INOTIFY_H)
 check_include_files(sys/mman.h HAVE_SYS_MMAN_H)
 check_include_files(sys/loadavg.h HAVE_SYS_LOADAVG_H)
 check_include_files(sys/poll.h HAVE_SYS_POLL_H)
@@ -654,7 +655,7 @@ else()
 	unset(HAVE_LUA_H)
 endif()
 
-if(WITH_FAM)
+if(WITH_FAM AND NOT HAVE_SYS_INOTIFY_H)
 	check_include_files(fam.h HAVE_FAM_H)
 	check_library_exists(fam FAMOpen2 "" HAVE_LIBFAM)
 	if(HAVE_LIBFAM)
