[core] sys-time.h - localtime_r,gmtime_r macros
sys-time.h - localtime_r,gmtime_r macros if needed

provide rudimentary localtime_r() and gmtime_r() if not present
(wraps localtime() and gmtime() funtions, but are not thread-safe since
 they do not take a lock around access to localtime() and gmtime())

(import from one of my development branches from 2015)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -466,7 +466,7 @@ hdr = base64.h buffer.h burl.h network.h log.h http_kv.h keyvalue.h \
 	configparser.h mod_ssi_exprparser.h \
 	rand.h \
 	sys-crypto.h sys-crypto-md.h \
-	sys-endian.h sys-mmap.h sys-socket.h sys-strings.h \
+	sys-endian.h sys-mmap.h sys-socket.h sys-strings.h sys-time.h \
 	mod_cml.h mod_cml_funcs.h \
 	safe_memclear.h sock_addr.h status_counter.h \
 	mod_magnet_cache.h \
