[core] http_date.[ch] encapsulate HTTP-date parse
http_date.[ch] encapsulate HTTP-date parse/compare

(import from one of my development branches from 2015)

--- a/configure.ac
+++ b/configure.ac
@@ -1479,6 +1479,7 @@ AC_CHECK_FUNCS([\
   sigaction \
   signal \
   srandom \
+  timegm \
   writev \
 ])
 AC_CHECK_HEADERS([sys/random.h], [AC_CHECK_FUNCS([getentropy])])
