--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -454,7 +454,7 @@ mod_wstunnel_la_LIBADD = $(common_libadd) $(CRYPTO_LIB)
 
 
 hdr = base64.h buffer.h burl.h network.h log.h http_kv.h keyvalue.h \
-	response.h request.h reqpool.h fastcgi.h chunk.h h2.h \
+	response.h request.h reqpool.h chunk.h h2.h \
 	first.h http_chunk.h \
 	algo_md.h algo_md5.h algo_sha1.h algo_splaytree.h algo_xxhash.h \
 	http_auth.h http_header.h http_vhostdb.h stream.h \
@@ -472,7 +472,8 @@ hdr = base64.h buffer.h burl.h network.h log.h http_kv.h keyvalue.h \
 	mod_magnet_cache.h \
 	ls-hpack/lshpack.h \
 	ls-hpack/lsxpack_header.h \
-	ls-hpack/huff-tables.h
+	ls-hpack/huff-tables.h \
+	compat/fastcgi.h
 
 
 DEFS= @DEFS@ -DHAVE_VERSIONSTAMP_H -DLIBRARY_DIR="\"$(libdir)\"" -DSBIN_DIR="\"$(sbindir)\""
