--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -361,7 +361,8 @@ hdr = base64.h buffer.h burl.h network.h log.h http_kv.h keyvalue.h \
 	rand.h \
 	sys-crypto.h sys-crypto-md.h \
 	sys-endian.h sys-mmap.h sys-setjmp.h \
-	sys-socket.h sys-strings.h sys-time.h \
+	sys-socket.h sys-stat.h sys-strings.h \
+	sys-time.h \
 	sock_addr.h \
 	mod_auth_api.h \
 	mod_magnet_cache.h \
