--- a/src/meson.build
+++ b/src/meson.build
@@ -121,6 +121,7 @@ conf_data.set('HAVE_GETLOADAVG', compiler.has_function('getloadavg', args: defs)
 conf_data.set('HAVE_GETRLIMIT', compiler.has_function('getrlimit', args: defs))
 conf_data.set('HAVE_GETUID', compiler.has_function('getuid', args: defs))
 conf_data.set('HAVE_GMTIME_R', compiler.has_function('gmtime_r', args: defs))
+conf_data.set('HAVE_INET_ATON', compiler.has_function('inet_aton', args: defs))
 conf_data.set('HAVE_INET_NTOP', compiler.has_function('inet_ntop', args: defs))
 conf_data.set('HAVE_JRAND48', compiler.has_function('jrand48', args: defs))
 conf_data.set('HAVE_KQUEUE', compiler.has_function('kqueue', args: defs))
