[core] warn if mod_authn_file needed in conf
warn if mod_authn_file is not listed in lighttpd.conf, but is needed

--- a/doc/config/conf.d/auth.conf
+++ b/doc/config/conf.d/auth.conf
@@ -7,9 +7,14 @@
 ## for more info and many more options.
 ##
 
+#server.modules += ( "mod_auth" )
+
+#server.modules += ( "mod_authn_file" )
 #auth.backend                 = "plain"
 #auth.backend.plain.userfile  = "/etc/lighttpd/lighttpd.user"
 
+#server.modules += ( "mod_authn_ldap" )
+#auth.backend               = "ldap"
 #auth.backend.ldap.hostname = "localhost"
 #auth.backend.ldap.base-dn  = "dc=my-domain,dc=com"
 #auth.backend.ldap.filter   = "(uid=$)"
